icons_hicolor = data_dir / 'icons' / 'hicolor'

# small bitmap icons
#
install_data(
    'png' / 'icon_16.png',
    rename: 'dosbox-staging.png',
    install_dir: icons_hicolor / '16x16' / 'apps',
)
install_data(
    'png' / 'icon_22.png',
    rename: 'dosbox-staging.png',
    install_dir: icons_hicolor / '22x22' / 'apps',
)
install_data(
    'png' / 'icon_24.png',
    rename: 'dosbox-staging.png',
    install_dir: icons_hicolor / '24x24' / 'apps',
)
install_data(
    'png' / 'icon_32.png',
    rename: 'dosbox-staging.png',
    install_dir: icons_hicolor / '32x32' / 'apps',
)

# scalable vector icon
#
install_data(
    'svg' / 'dosbox-staging.svg',
    install_dir: icons_hicolor / 'scalable' / 'apps',
)
